# Riker_Engine

./: .gitignore  ASD_Molecular_Autism_Cover_Letter.md  ASD_Molecular_Autism_Submission.md  ASD_Stability_Profiling_Preprint_v2.md  Additional_file_1_purinergic_query.csv  Additional_file_2_meta_analysis.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PHASE12_phase5_replication_py.md  PHASE13_phase6_meta_py.md  PHASE14_operational_shell.md  PHASE15_assertions_and_snrnaseq.md  PHASE16_readme_and_tests.md  PHASE1_welch_py.md  PHASE3_meta_py.md  README.md  Riker_Engine_Dissertation_v2.md  Riker_Engine_Preprint_v4.md  build_submission_docx.py  pyproject.toml  requirements-lock.txt
.github/workflows/: test.yml
benchmarks/: benchmark_report.md  compare_results.py  megena_asd_benchmark.R  metade_asd_benchmark.R  test_all_diseases_ui.py  wgcna_asd_benchmark.R  wgcna_asd_remaining.R
benchmarks/results/: GSE28475_gene_modules.csv  GSE28475_module_trait.csv  GSE28475_sft.csv  GSE28521_gene_modules.csv  GSE28521_module_trait.csv  GSE28521_sft.csv  (+6 more)
configs/: ipf_curated.yaml  negative_control.yaml
data/: DATA_MANIFEST.md
docs/: ACTION_PLAN.md  CONFIGURATION.md  DATA_RECONSTRUCTION.md  DISEASE_DAY_SOP.md  NEW_DISEASE_GUIDE.md  PIPELINE.md  RIKER_ENGINE_METHODS.md  SOP_LESSONS.md  ad_validation_report.md  index.md
examples/: ad_config.yaml  asd_config.yaml
manuscripts/: ASD_Stability_Profiling_Preprint_v2.md  ASD_Stability_Profiling_Preprint_v3.md  Additional_file_2_meta_analysis.md  Riker_Engine_Preprint_v4.md
results/: INDEPENDENT_VALIDATION.md  README.md  REPLICATION_LOG.md  RIKER_ENGINE_INDEPENDENT_VALIDATION_REPORT.md
riker/: __init__.py  cli.py  config.py
riker_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: cold_replication_ipf.py  download_data.py  drug_target_analysis.py  stability_profiling.py
session_receipts/: 2026-04-26_asd_disease_day.md  2026-04-26_disease_day_push.md  2026-04-26_seed_csv_cleanup_commit.md  2026-04-26_session_3_ipf_preflight_and_perf_docs.md  RECEIPT_TEMPLATE.md
stability_ASD_blind/: run_summary.csv  stability_report.txt  stability_scores.csv
tests/: test_ingestion.py  test_phases.py  test_qc.py  test_stats.py
(+295 files in other folders)
