[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riker-engine"
version = "0.3.2"
description = "Condition-agnostic framework for identifying coordinately dysregulated gene modules from public transcriptomic data"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
authors = [{name = "Ray Sigmon"}]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<2",
    "scipy>=1.11",
    "requests>=2.31",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
clustering = ["umap-learn>=0.5", "hdbscan>=0.8,<0.9"]
snrnaseq = ["scanpy>=1.9", "anndata>=0.9"]
geo = ["GEOparse>=2.0"]
ui = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "jinja2>=3.0", "python-multipart>=0.0.5"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["riker-engine[clustering,snrnaseq,geo,ui,dev]"]

[project.scripts]
riker = "riker.cli:main"

[tool.setuptools.packages.find]
include = ["riker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
